# rust-android-adb-automation

./: .gitignore  AGENTS.md  Dockerfile  IMAGE_LOADING_OPTIMIZATION.md  LICENSE  LICENSE.DUAL  MATCH_PATCH_INTEGRATION.md  PROJECT_STATUS.md  README.md  THREADED_MATCHING_OPTIMIZATION.md  check-gh-build.sh  run-gh-copilot.sh  test_timing.txt
.github/: GITHUB_ACTIONS_SETUP.md  QUICK_REFERENCE.md
.github/workflows/: README.md  ci.yml  release.yml
android-adb-run/: ADB_SIMPLIFICATION.md  AGENTS.md  Cargo.toml  DIOXUS_SETUP.md  ERROR-Terminal.md  HARDWARE_TESTS.md  IMAGE_CAPTURE_FIX.md  IMAGE_RECOGNITION.md  IMPLEMENTATION_STATUS.md  MATCH_IMAGE_STATUS.md  NATIVE_DECORATIONS_CLEANUP.md  README.md  REFACTOR_TODO.md  TAP_DISCONNECT_DETECTION.md  TAP_ERROR_FLOW.md  TAP_ERROR_INVESTIGATION.md  TAP_TIMEOUT_DEBUG_GUIDE.md  TIME_INTERVALS.md  TODO.md  USB_DISCONNECT_TEST_GUIDE.md  build.rs  timed_events.toml
android-adb-run/.cargo/: config.toml
android-adb-run/examples/: README.md  extract_patch.rs  match-patch-regions.rs  test_adb_connection.rs  test_adb_disconnect.rs  test_adb_disconnect_comprehensive.rs  test_adb_image_capture.rs  test_claim_tap_timeout.rs  test_desync_recovery.rs  test_protocol_sync.rs  test_tap_timeout.rs  test_touch_events.rs
android-adb-run/src/: adb.rs  adb_backend.rs  adb_client.rs  adb_impl.rs  adb_rust.rs  adb_shell.rs  args.rs  dioxus.rs  game_automation.rs  lib.rs  main.rs
android-adb-run/src/adb/: backend.rs  error.rs  mod.rs  rust_impl.rs  selector.rs  shell.rs  tests.rs  types.rs  usb_impl.rs
android-adb-run/src/game_automation/: channels.rs  config.rs  fsm.rs  mod.rs  types.rs
android-adb-run/src/game_automation/fsm/: commands.rs  reconnect.rs  run_loop.rs  scheduler.rs
android-adb-run/src/game_automation/match_image/: config.rs  detector.rs  match_patch.rs  mod.rs  region.rs  template.rs  tests.rs
android-adb-run/src/gui/: dioxus.rs  dioxus_app.rs  mod.rs  util.rs
android-adb-run/src/gui/components/: actions.rs  device_info.rs  header.rs  interaction_info.rs  screenshot_panel.rs
android-adb-run/src/gui/hooks/: automation_loop.rs  device_loop.rs  mod.rs  runtime_timer.rs  types.rs
android-adb-run/src/gui/hooks/device_loop/: connection_monitor.rs  device_discovery.rs  initial_screenshot.rs  mod.rs  template_matching_pipeline.rs
android-adb-run/src/template_matching/: matcher.rs  mod.rs  types.rs
dataset/: README-yolo.md  data.yaml
docs/: MULTI_TEMPLATE_GUIDE.md  TEMPLATE_MATCHING_COMPARISON.md  TEMPLATE_MATCHING_EXAMPLES.md  WINDOWS_BUILD_FIX.md  WINDOWS_BUILD_FIX_SUMMARY.md
label-studio/: README-label_studio.md  label_studio.sqlite3
label-studio/export/: project-1-at-2026-01-24-23-42-d278e3ea-info.json  project-1-at-2026-01-24-23-42-d278e3ea.json
scripts/: AI.md  Dockerfile-gemini  check-gh-build.sh  run-gemini-container.sh
