[package]
name = "android-adb-run"
version = "0.1.3"
edition = "2024"

[dependencies]
# dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus = { version = "0.7.0-rc.3", features = ["desktop"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["time", "process", "fs", "rt", "rt-multi-thread", "macros"] }
# https://crates.io/crates/adb_client
adb_client = "2.1.17"
# Image processing for framebuffer to PNG conversion
image = { version = "0.25", features = ["png", "jpeg"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
