[package]
name = "android-adb-run"
version = "0.1.3"
edition = "2024"
license = "AGPL-3.0-or-later OR LicenseRef-Commercial"
authors = ["Vigor Solutions"]
description = "Android ADB automation tool with GUI for device control and game automation"
repository = "https://github.com/diepes/rust-android-adb-automation"
readme = "README.md"
keywords = ["android", "adb", "automation", "gui", "testing"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus = { version = "0.7.0-rc.3", features = ["desktop"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["time", "process", "fs", "rt", "rt-multi-thread", "macros"] }
# https://crates.io/crates/adb_client
adb_client = "2.1.17"
# Image processing for framebuffer to PNG conversion and image recognition
image = { version = "0.25", features = ["png", "jpeg"] }
# For image template matching
imageproc = "0.25"

# Force all rustls dependencies to use 'ring' instead of 'aws-lc-rs'
# aws-lc-rs has build issues on Windows with long file paths
# ring is pure Rust and builds reliably on all platforms
[patch.crates-io]
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
