[package]
name = "android-adb-run"
version = "0.1.9"
edition = "2024"
license = "AGPL-3.0-or-later OR LicenseRef-Commercial"
authors = ["Vigor Solutions"]
description = "Android ADB automation tool with GUI for device control and game automation"
repository = "https://github.com/diepes/rust-android-adb-automation"
readme = "README.md"
keywords = ["android", "adb", "automation", "gui", "testing"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus = { version = "0.7.0-rc.3", features = ["desktop"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["time", "process", "fs", "rt", "rt-multi-thread", "macros"] }
# https://crates.io/crates/adb_client
adb_client = "2.1.17"
# Image processing for framebuffer to PNG conversion and image recognition
image = { version = "0.25", features = ["png", "jpeg"] }
# For image template matching
imageproc = "0.25"
# Force the RustTLS ecosystem to use the pure-Rust ring backend instead of aws-lc-rs
# This keeps Windows builds working without needing C11 atomics or aws-lc native toolchain
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std", "tls12"] }
rustls-webpki = { version = "0.103.7", default-features = false, features = ["ring"] }
rcgen = { version = "0.13.2", default-features = false, features = ["ring"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[build-dependencies]
time = "0.3"
